--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,8 @@
 {
   "redirects": [
     {
-      "source": "/api",
-      "destination": "https://api.infojobs.net/api/",
-      "statusCode": 200
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/api",
-      "destination": "https://api.infojobs.net/api/"
+      "source": "/api/(.*)",
+      "destination": "https://api.infojobs.net/api/$1"
     }
   ]
 }
