--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "redirects": [
     {
-      "source": "/api/(.*)",
+      "source": "api/(.*)",
       "destination": "https://api.infojobs.net/api/$1"
     }
   ]
